--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jahid portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="container">
+        <div class="width_set">
+            <h1>Wellcome To</h1>
+            <h1> <span class="name_color">Jahid Hasan</span>  World!</h1>
+            <h3>Programmer and Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsum molestiae facilis, excepturi officia earum deleniti debitis corporis dolorem, fuga, officiis inventore consequatur voluptatem ea ex ipsam corrupti iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, illo sit delectus sequi pariatur repellendus maiores, ut, ea odio molestias reiciendis similique? Officiis hic numquam voluptatum cum delectus repellendus dolor?</p>
+            <a class="btn_style" target="blank" href="https://www.linkedin.com/in/jahid-hasan-6479b7232/">Hire Me</a>
+        </div>
+       <div class="width_set">
+            <img src="images/my-bg2.png" alt="">
+       </div>
+     
+    </section>
      
 </body>
 </html>
