--- a/index.html
+++ b/index.html
@@ -16,13 +16,24 @@
             <h1>Wellcome To</h1>
             <h1> <span class="name_color">Jahid Hasan</span>  World!</h1>
             <h3>Programmer and Web Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsum molestiae facilis, excepturi officia earum deleniti debitis corporis dolorem, fuga, officiis inventore consequatur voluptatem ea ex ipsam corrupti iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, illo sit delectus sequi pariatur repellendus maiores, ut, ea odio molestias reiciendis similique? Officiis hic numquam voluptatum cum delectus repellendus dolor?</p>
+            <p class="p_style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsum molestiae facilis, excepturi officia earum deleniti debitis corporis dolorem, fuga, officiis inventore consequatur voluptatem ea ex ipsam corrupti iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, illo sit delectus sequi pariatur repellendus maiores, ut, ea odio molestias reiciendis similique? Officiis hic numquam voluptatum cum delectus repellendus dolor?</p>
             <a class="btn_style" target="blank" href="https://www.linkedin.com/in/jahid-hasan-6479b7232/">Hire Me</a>
         </div>
        <div class="width_set">
             <img src="images/my-bg2.png" alt="">
        </div>
      
+    </section>
+    <section class="dream_container">
+        <div class="width_set">
+            <img class="image_size" src="images/my-bg.png" alt="jahid-hasan">
+        </div>
+        <div  class="width_set">
+            <h1>Future Dream</h1>
+            <h3>Become a <span class="web_color">web Developer</span> </h3>
+            <p class="p_style">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, dolores. Fugiat inventore reiciendis hic voluptates. Reiciendis nostrum corporis voluptatum officia non, possimus nemo, cumque inventore, atque unde distinctio voluptates nobis quas eos vero qui. Esse ducimus velit quos, eaque odit quis aliquid quidem. Incidunt praesentium amet molestias? Nemo, illo vitae!</p>
+            <a class="btn_style" target="blank" href="#">Download Resume</a>
+        </div>
     </section>
      
 </body>
