--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
             <a class="btn_style" target="blank" href="#">Download Resume</a>
         </div>
     </section>
+    <section>
+        <h1 id="exp">Experience</h1>
+        <div class="exp_container">
+            <div class="use_shadow side_border">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="name_color">2021-Present | Pro Level Developer</h3>
+                <p class="p_style">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div  class="use_shadow side_border_1">
+                <h1>Baby Web Developer</h1>
+                <h3 class="name_color ">2020-2021 | Programming Hero Learner</h3>
+                <p class="p_style">They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
      
 </body>
+<footer>© JAHID HASAN 2023, a Programming Hero initiative.</footer>
 </html>
